[workspace]
members = ["ces-pois"]
resolver = "2"

[workspace.package]
edition = "2021"


[workspace.dependencies]
anyhow = { version = "1", default-features = false }
bigdecimal = "0.4"
dashmap = "5.5.3"
hex = { version = "0.4", default-features = false }
lazy_static = { version = "1", default-features = false }
merkle_light = "0.4.0"
num-bigint-dig = "0.8.4"
num-integer = "0.1.45"
num-traits = "0.2"
prost = { version = "0.11", default-features = false, features = [
    "prost-derive",
] }
rand = "0.8.5"
rsa = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1.41.1" }
sysinfo = { version = "0.24.0" }
async-trait = "0.1"

ces-pois = { path = "ces-pois" }
